Updated/fixed doc of Moving